--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -3953,5 +3953,199 @@
   "aae5e3da-7bc1-4d0a-bf0b-56b97c017ba2": "{seconds} seconden geleden",
   "5e3c0459-3ee0-4c2f-9657-5e189dbf749d": "zojuist",
   "8ae93138-5aeb-4bd4-8845-d57c1e2d62f2": "om",
-  "b6185496-deab-4569-906f-c636e625bcd1": "todo"
+  "b6185496-deab-4569-906f-c636e625bcd1": "todo",
+  "3024d542-4987-4487-ae83-6593036a7e1d": "Aansluitingen aanrekenen",
+  "e58db898-16ad-4bb4-840c-2315ca894ff6": "Experimenten",
+  "88136719-d85f-499f-8c5f-252519947c03": "Instellingen",
+  "e0d1cceb-6d03-40a3-bb5c-fe079ae08704": "Synoniem",
+  "e9a19cd1-7a57-440d-a97e-6cff23a7f46c": "Voorwaarden",
+  "d8ceaf3c-7395-4ace-9dba-f29390f07222": "Administratieportaal",
+  "2f140e22-4940-453f-8f49-871a69f0776e": "Documenten",
+  "9464cf2b-10a9-4690-8ab6-2e3d2f3e9b9d": "Document",
+  "e8340220-a719-4ab8-82ff-627fce627235": "Domeinnaam kiezen",
+  "0fc72e2d-5fe5-4ed2-ba5d-1f880790c174": "Boekhouding",
+  "4a7e3838-f75a-4610-9caa-0f75849ea142": "Personaliseren",
+  "36459d6c-1685-463a-829f-bc92f83d1f0f": "Privacy",
+  "7f2ccfd4-a570-46fe-bc8a-44e4a6144081": "Jullie ledenportaal",
+  "e2351ad3-5e04-41b8-8ec8-124f3d823b75": "Exporteren",
+  "6a1afe5c-dd96-4b0f-ad6f-f0598b366d54": "Vrije bijdrage",
+  "e96ab70d-4095-47b2-90bf-451870b07e05": "Voorgesteld bedrag",
+  "899d369b-4f31-4c80-a6ca-2abfc76584a8": "SMS'en",
+  "7230cd66-d5b3-4f3e-9cf6-27f5486b52f1": "Sponsor toevoegen",
+  "b5de4be6-b533-4949-97d8-ad8f1d3ca896": "Sponsor bewerken",
+  "1866a2ab-1798-45df-a619-0929258d6cd8": "Webshop archief",
+  "d0f49d2a-6b83-4e03-9480-4d0995bbb0a1": "Vragenlijsten en gegevens",
+  "455d581c-bfae-47a1-ac6f-e88068edce26": "Categorie toevoegen",
+  "cc20edc8-b323-4627-9940-a9cc23b5fd8d": "Kortingscode toevoegen",
+  "22797257-f650-4609-96f8-3a10f7e687c7": "Kortingscode bewerken",
+  "0569800c-393c-486e-8d97-9c2b7689624a": "Kortingvoorwaarde toevoegen",
+  "d0bb4aed-a00e-4725-83d8-b6d1cf8fc90c": "Kortingvoorwaarde bewerken",
+  "c15656cf-5ce1-4f77-92d7-bca128316cfd": "Korting toevoegen",
+  "9b8ce2cd-e96a-49ad-9494-53d30e2ef679": "Korting bewerken",
+  "b08ae26a-874b-40cd-adb9-98bdccaa99e0": "Productkorting toevoegen",
+  "0b100742-cfe5-4a3a-b0ee-18c278c5d617": "Productkorting bewerken",
+  "fdbec5b0-6fb0-4f0b-9efa-4e4a394605d0": "Korting",
+  "fb25fbab-3376-494c-a286-6f0ceef13f87": "Vraag toevoegen",
+  "cbbe2de7-2d23-445c-8d23-48ce8bd3849c": "Vraag bewerken",
+  "1e78e9e7-bc02-4334-af6f-415ca265fdd8": "Tijdvak toevoegen",
+  "c70f1d81-e63d-4bb3-8e32-41b767eff6c0": "Tijdvak bewerken",
+  "cb1db7b7-2470-448c-8ebd-ce5702439538": "Keuzemenu toevoegen",
+  "feef080d-4172-4ab0-a69f-d3769f32cfa8": "Keuzemenu bewerken",
+  "f4d789d3-51e6-40ca-9c10-b81ffff6e32f": "Keuze toevoegen",
+  "67605bca-eb74-4d32-8e81-c4c1d3c66105": "Prijskeuze toevoegen",
+  "da9a9438-6686-4740-806e-1f4958b3ff9f": "Prijskeuze bewerken",
+  "ae73c6a0-f270-4e4f-a171-417a00fcdb0a": "Categorie bewerken",
+  "19bd9ed4-585f-4cc5-a4ea-643f00481b77": "Producten",
+  "32e049b4-acd6-4d77-a5b8-0632111f2445": "Tickets",
+  "e0f1bd7f-332f-4c99-adab-35a7e7481cf9": "Bestelling #",
+  "5b280bad-2167-42e6-8c4f-177ab1d76c67": "Zaaloverzicht",
+  "66440c5e-e663-4406-b6f0-868e0bb50bab": "Tickets scannen",
+  "69919e1e-89c6-44d7-beb1-c7b243c5a316": "Ticket al gescand",
+  "6e958518-8f12-4e1b-b3af-c7d7cd0afbb6": "Leden",
+  "cc49441a-2dba-4263-a93d-23008adac4f8": "Maak jouw account",
+  "de716992-0ce7-45a3-b45b-f269d3d17256": "Winkelmandje",
+  "60231186-b00f-4d07-a5c7-4a905467e254": "Activiteiten",
+  "b4cba044-12c3-464d-8bc1-2873996f02fa": "Gegevens nakijken",
+  "39f41938-8165-49bb-bffe-6800155f02a4": "Kies je leveringsadres",
+  "b799ec1f-af00-45a9-a0bf-7d02418d18b8": "Kies je afhaalmethode",
+  "1db407ec-4d25-40f9-92b9-abf820faaf98": "Jouw gegevens",
+  "844333d1-ba08-4d37-bdf3-eae024c87ff3": "Beheerders",
+  "09004cd9-3fc8-4ba6-b758-5fe2348b4982": "Geen toegangsrechten",
+  "6e948886-0b41-49e8-80be-0e2e3c795359": "Hoofdbeheerders",
+  "1186a60b-c59f-43d5-ba58-04ff9288c266": "Vul de voornaam in",
+  "d26a3f0b-667f-463c-ac49-8aab0462c0c3": "Vul de achternaam in",
+  "2289a0b3-d7e1-45a6-997b-b01a66182df6": "Beheerder",
+  "53f702bf-2140-4ebf-8ebd-f6ec31185377": "is toegevoegd en heeft een uitnodiging via email ontvangen.",
+  "9e4f2ef0-aa2f-42d3-8079-13f2e071db91": "is aangepast",
+  "e8b646d5-1377-465e-b29d-163d437e5c02": "Ben je zeker dat je deze beheerder wilt verwijderen?",
+  "25d866b7-3859-4a5d-b875-bc286e69f846": "Verwijderen",
+  "4f093ade-8fcd-4849-8b9d-6e2db171880c": "is verwijderd",
+  "88f254ee-bc8c-4a2f-9a00-9e9102354268": "Wijzigingen niet opgeslagen",
+  "acc4cfd1-42ad-45a2-bb1e-841b52f7c4e6": "Voor je een uitnodiging opnieuw kan versturen moet je alle wijzigingen opslaan of annuleren.",
+  "a94e08c1-bddf-4f13-af83-8349dc361a47": "Uitnodiging verzonden naar",
+  "3953d383-4f04-42ea-83cd-bf65478ed4a9": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
+  "4cfb2940-8532-446e-b543-a4c7ba9618a3": "Niet opslaan",
+  "d51b7cc1-ce3d-45ad-9be0-105e97d0e4b9": "Toegangsbeheer",
+  "89b5d229-1850-4063-960a-dbacee794d72": "Standaardfuncties",
+  "5f37ed88-8822-44bb-8f06-7f527c5d00fe": "Groepseigenfuncties",
+  "89360094-8856-4b28-8921-e3d561ef824c": "De wijzigingen zijn opgeslagen",
+  "055ba4d1-abf5-4c10-9da1-29311a113568": "Rechten voor",
+  "db4cb26a-c23f-4f29-b4c3-233cd0f08f38": "Nieuwe rol",
+  "0b7bedcd-0e5a-4ef3-b2d8-7ee2c23650e5": "Gelieve een titel in te vullen",
+  "4d88b931-3fa4-497d-8a23-481f8f58a967": "Ben je zeker dat je deze rol wilt verwijderen?",
+  "5c7bd1da-78a7-428c-9c93-2be66c44ff6c": "Geen toegang",
+  "e80f2233-257d-45df-a04e-af7e5f694546": "Lezen",
+  "194b293f-79ca-4ad9-820d-91f0ada966ad": "Bewerken",
+  "b182a5e2-aae7-48ae-bb42-c51edfb5df29": "Volledige toegang",
+  "dc1ffb07-49de-475c-9d96-6940d0cbbc09": "Geen basistoegang",
+  "c3d22dca-87b6-4975-96ff-72ffe2ce99d0": "Inbegrepen bij",
+  "74dd7a35-db8b-477d-934a-2681d8d35184": "Niet inbegrepen bij",
+  "c2cbfcc6-dfdd-4047-b178-76211382d405": "Logboek",
+  "13f1507b-7ad1-4748-981f-8b7b12aa2dce": "vandaag",
+  "12a16bab-7d3e-46e0-95dc-43aef6818bff": "gisteren",
+  "1089afa3-5103-44de-a7e5-9501f058b26e": "deze week",
+  "c37c5108-b223-4a83-8a05-e51324da93b7": "vorige week",
+  "6df4e1c5-81cd-4abb-a0dd-528aee6acaa3": "Door",
+  "ba7666c5-9641-4ba2-affa-a811e1773af6": "Indirect veroorzaakt door betaalstatuswijziging door",
+  "6137567d-3cd1-4b89-bfcb-7cbebb60e43a": "Automatische actie veroorzaakt door",
+  "09219c0e-ed21-49eb-889d-9409d5f66006": "Door verwijderde gebruiker",
+  "c2fd98f0-5081-4ce2-8313-ca45ee302eda": "Door anonieme gebruiker",
+  "6ccdb9e8-c878-4bd9-a66e-8366ad66c0d1": "Automatische systeemactie",
+  "12d14007-0c25-4bec-86f6-d018260d8644": "Indirect veroorzaakt door betaalstatuswijziging",
+  "27a704b7-9e97-432f-bfb4-ab8322b2a016": "Toon alle gebeurtenissen van dit object",
+  "3e6ba5d2-adb4-4413-b40f-eba2ae951c7a": "toegevoegd",
+  "4dccea53-5191-48bf-b227-b59b8e41d8f0": "verwijderd",
+  "7654d4ed-431e-4613-a60c-aa61b066fac4": "aangepast",
+  "a8e73745-0ef7-4c56-81dd-ad642d905431": "volgorde gewijzigd",
+  "73466f92-bfc1-4fd8-9de7-363738ac6dd7": "Je moet minimaal 5 minuten wachten voor je een nieuwe e-mail kan versturen. Kijk jouw inbox goed na!",
+  "6e55c6ff-8487-4376-8804-1b3934623146": "Wil je een nieuwe bevestigingsmail sturen?",
+  "776a9bda-a078-4fe8-afa8-3285b5f5c794": "Ja, versturen",
+  "f8a74bb1-0df6-4313-875d-ac4b0ba3b36c": "Kijk ook zeker in jouw spambox, wacht enkele minuten en kijk opnieuw. Kijk ook na of je geen typefouten hebt gemaakt in jouw e-mailadres (dan maak je best een nieuw account aan).",
+  "cc0f2b34-b2c3-4df1-871d-17ad969205c5": "Je hebt een nieuwe e-mail ontvangen. Kijk jouw inbox en spambox goed na!",
+  "6df6c342-d948-41b1-b913-55cfd3c2b558": "email",
+  "a66456db-d4d8-4f4e-895e-e66aa873604a": "Jouw e-mailadres is geverifieerd!",
+  "91ac3f67-da37-4366-9392-d07148e5557f": "Ben je zeker dat je wilt annuleren?",
+  "078baf81-049b-4f3f-9ccb-8ab39b8ddaf8": "Sluiten en niet voltooien",
+  "a7c42cd2-eeca-4286-9ac9-1a9bc951f86f": "Wachtwoord opnieuw instellen",
+  "2fd0cda5-225c-4b65-87b1-210c9b54023c": "Account aanmaken",
+  "81bbd6ba-ad08-4e3c-bade-d1cfd23949d9": "Stel een nieuw wachtwoord in voor jouw account.",
+  "0576b8e6-baa7-4cb9-978a-806f81144427": "Kies een wachtwoord voor jouw nieuwe account",
+  "b33f433c-0957-4411-a0d6-0f41cf5caa63": "Wachtwoord wijzigen",
+  "c7d81ba9-a143-4cdd-a5b3-8089e11eea92": "Deze link is ongeldig of vervallen. Stuur een nieuwe e-mail om je wachtwoord opnieuw in te stellen.",
+  "bd9a0e83-7491-4d0b-bc51-69e6d93db1c8": "Deze link is ongeldig",
+  "e9ca6bf3-1b1b-4099-b15f-82d98ac3557f": "Vul jouw voornaam in",
+  "b1632f76-4597-402b-99bf-9f53efb5ed32": "Vul jouw achternaam in",
+  "a5fbbeef-50dc-4825-8677-ba984b13d5cc": "De ingevoerde wachtwoorden komen niet overeen",
+  "fa4405a2-cca9-4643-827d-76a5cff2846c": "Jouw wachtwoord moet uit minstens",
+  "89cd482b-36a2-49a3-9601-0b66aa90c7a2": "karakters bestaan.",
+  "ba5fb68b-b43b-4e7a-8dfe-abe142b2b647": "Jouw nieuwe wachtwoord is opgeslagen",
+  "661733da-dfb8-4091-bb69-d2d199f18aa8": "Jouw account is aangemaakt",
+  "0eb7d18f-2fd7-4ac8-acb6-5e1c31482b3c": "Wachtwoord vergeten",
+  "9135aae1-14b5-4a92-b379-5f53702adffc": "Je hebt een e-mail ontvangen waarmee je een nieuw wachtwoord kan instellen",
+  "8ea6b1b7-4c8b-462d-83d7-7856cee51d6c": "Inloggen",
+  "a7e7f69a-3ea8-4821-983a-47b0be06b430": "Bezig met laden...",
+  "bac8adfa-0bd1-4180-9143-767f24efa111": "Jouw wachtwoord moet uit minstens 8 karakters bestaan.",
+  "892db826-a373-4f7f-96bf-6f1f3fa6eede": "Privacybeleid",
+  "cad17893-df84-445c-b85b-b48e2eccfdaf": "Ik ga akkoord met",
+  "2d9ef8cb-a1be-4968-82a1-ea029c5fa104": "het privacybeleid",
+  "d5474814-62d6-4a54-94ea-6b9cd0a0d769": "Je moet akkoord gaan met de voorwaarden voor je een account kan aanmaken.",
+  "e1193431-b95a-4a8a-94b2-8659005dcb77": "TabBarController",
+  "9120db75-8638-4cab-9dca-8bd81390149e": "Developers",
+  "40c0b334-e007-4fc1-88e5-b38707175d45": "Standaard",
+  "8bc22ee1-303e-4b40-94dc-72c5869abdbc": "Production",
+  "cab2694d-8d0f-44d0-9819-d2d2c4148b22": "Staging",
+  "d517ff0c-abad-4a23-91e2-3463279cfa65": "Development",
+  "5d614fe0-ec0d-47af-92bc-8c50f09717e2": "Wijzigingen opgeslagen",
+  "14abcd1e-7e65-4e84-be4c-ab2e162ae44d": "Opslaan",
+  "4e1dc79e-b09c-41ec-aa8d-a2d052761bfe": "Annuleren",
+  "1a4e5a36-80ae-4858-a16b-a430c806ee8f": "Selecteer eerst tekst die je klikbaar wilt maken",
+  "f60878fd-f28a-4585-a2d6-3e90437ae8c1": "Ongeldige URL",
+  "8f419200-148a-4f76-8292-def02fffb0be": "Vet",
+  "20a9c3b3-a4df-431e-a4e0-dd22a2ddf51f": "Cursief",
+  "fd97c699-c6c7-4861-a22e-317a51f87ed0": "Onderstrepen",
+  "109b8d55-5b39-47da-92ad-fbdfa0f3d0b0": "Titel",
+  "fc5107e1-3576-4a8a-b35c-26918f0d8052": "Koptekst",
+  "002d6c62-a1d1-4efa-a230-b03456b2d872": "Subkop",
+  "2a2b03b6-f858-48c0-963e-b1dfdb107f25": "Licht gekleurd",
+  "9f87bc88-6829-46dc-8bf3-333437e7bee3": "Opsomming met bolletjes",
+  "8d17be46-de96-4e84-af15-6bd18e8b4b17": "Opsomming met nummers",
+  "1363c0ee-0f4b-43f8-a9ee-a2a6091e5d96": "E-mailadressen",
+  "3338f8ad-c4d7-4d09-9254-70bc3f0449a9": "Nieuwe e-mail",
+  "a6d49891-5af9-4dee-8dba-57ad854fb955": "Even geduld, de wijzigingen zijn nog aan het opslaan. Probeer straks opnieuw.",
+  "8ea1d574-6388-4033-bb4e-f2e031d2da3b": "Ben je zeker dat je de e-mail wilt versturen?",
+  "e0c68f8b-ccb1-4622-8570-08abc7f5705a": "Versturen",
+  "0adee17a-6cb5-4b32-a2a9-c6f44cbb3e7d": "De e-mail is verzonden. Het kan even duren voor alle e-mails zijn verstuurd.",
+  "d8b6c55e-72c5-4cde-bdd9-cee3b5bae6ae": "Onbekend",
+  "93533097-46c1-4f88-a582-1634d57ac2c0": "Bestanden groter dan 10MB kunnen niet worden verstuurd.",
+  "70436d52-5a86-4231-89d5-2adf8bfd628f": "We raden af om Word of Excel bestanden door te sturen omdat veel mensen hun e-mails lezen op hun smartphone en die bestanden vaak niet (correct) kunnen openen. Sommige mensen hebben ook geen licentie voor Word/Excel, want dat is niet gratis. Zet de bestanden om in een PDF en stuur die door.",
+  "e7ff72f3-ca11-4a2d-b6f9-afeb344f5da6": "Ben je zeker dat je de huidige inhoud wilt overschrijven?",
+  "6d679732-b845-4f36-8ed3-4024cd01f745": "Overschrijven",
+  "be3680ca-ee60-4d09-b2f4-346617949956": "De huidige inhoud van je e-mail gaat verloren",
+  "94bdc2a4-9ebb-42d2-a4e9-d674eb9aafef": "Geen of slechte internetverbinding",
+  "008c80e4-a46f-4e1c-8f45-d383008b2e10": "Activiteit toevoegen",
+  "e4bff2f3-d273-4755-b617-f792a01f8325": "Activiteit bewerken",
+  "e07de917-f506-4699-9198-de9d4cbb5ca9": "Kies een organisator",
+  "382fab7a-2276-4aac-a785-7dac7dcc2b20": "De locatie is verplicht voor deze soort activiteit.",
+  "222eb3ab-1e8d-4530-9636-0bf5525a9159": "Kies minstens één leeftijdsgroep.",
+  "663a1f20-3b21-4e8d-bb21-530918648af1": "Ben je zeker dat je deze melding wilt verwijderen?",
+  "37907821-2e63-4f33-9ae6-db1b0d82f086": "Ja, verwijderen",
+  "988f9fce-a36a-44b5-8df6-5d9ff9eaa694": "Je kan dit niet ongedaan maken",
+  "3074ee0a-4531-47d5-a167-d058d8fc2c96": "Ben je zeker dat je deze melding terug naar klad wilt verplaatsen?",
+  "21e75f22-0079-4a82-bc0e-b8ecf877d39c": "Ja, naar klad",
+  "13daa284-503c-4841-a2ec-16d89ab38cdc": "Wijzig status",
+  "84dc69fb-179d-4e25-a5c8-4a6beb57bcdd": "Bevestigen",
+  "cda73dc5-5612-4561-bf92-f18157dcad64": "Betalingen",
+  "6030bf67-f3ec-48f1-8c00-be3e3f745351": "Openstaand bij {organization}",
+  "27bc7f00-1839-4f47-b8e5-7f4c6996fa53": "Toestemming gegevensverzameling",
+  "57ee093f-d5f8-40f5-a991-53ff348c7376": "Geen",
+  "b1f2fdc7-1235-4abf-a925-60128cbcedcc": "Jouw plaatsen",
+  "a87b9dfd-4acd-40c0-b430-f29dc8ec0fbf": "Reeds aangerekend voor {group}",
+  "45d9b6c1-1af8-4590-88ff-091a2a93c71a": "Later te betalen",
+  "4789d323-f2da-4e87-a17c-7d29f813d68e": "Tegen {date}",
+  "bf12f6a6-3513-451e-bf8e-fdec5833f5da": "Subtotaal",
+  "566df267-1215-4b90-b893-0344c1f1f3d3": "Openstaand bedrag stijgt met",
+  "566e4010-63b7-42e7-9b94-fcdec3f95767": "Openstaand bedrag daalt met",
+  "6219b760-90aa-4758-8102-119af7e596e7": "Nu te betalen",
+  "482bf48b-ebbc-42e5-8718-6ee11d217510": "Totaal",
+  "4070dda9-b556-49cd-ba17-aad535240835": "todo"
 }
