--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4873,5 +4873,27 @@
   "1b7b7815-6454-4570-8ce8-fcff09df2efd": "De inschrijvingen voor {group} zijn volzet",
   "545a9cc4-553d-4013-a8ef-e4a9a3107a9c": "Het tarief {name} is uitverkocht",
   "96b60f72-2bc6-479d-b317-616e23056e5c": "De keuzemogelijkheid {name} is uitverkocht",
-  "e122d6c9-a452-4c70-9868-f53c2520aedc": "todo"
+  "e122d6c9-a452-4c70-9868-f53c2520aedc": "todo",
+  "b9bac60d-1fd8-43e7-9c9d-4b9b5227f9d6": "Vul ontbrekende gegevens aan van {member}",
+  "77e44908-5498-4b91-9b4f-8e55cb282dc5": "Enkele gegevens van {member} ontbreken. Vul deze aan.",
+  "69385e1a-413f-4583-9061-67072d0742b9": "Voeg e-mailadres toe van {member}",
+  "f7999a55-e73a-49c4-ac9f-f5030d96ba43": "todo",
+  "d7fdebd4-7c3c-4316-b862-7ed777ff36ad": "todo",
+  "04ff85c0-eb98-46b8-975b-8fd136ddc49a": "Een {name} moet minimum {days} duren",
+  "a7d005aa-ceaa-4323-8fac-a02fce174023": "Een {name} mag maximaal {days} duren",
+  "76a41c36-99d1-467c-a243-3a30a56c272e": "Voorbeeld: de aangerekende administratiekost bedraagt {exampleAdministrationFee1} op een bedrag van {exampleAdministrationFeeValue1}, en {exampleAdministrationFee2} op een bedrag van {exampleAdministrationFeeValue2}.",
+  "90c49f44-4daa-4746-8fda-3558c588e651": "{member} kan je op dit moment niet inschrijven bij {organization}. Dit kan het geval zijn als: de inschrijvingen gesloten zijn of als dit lid in geen enkele groep 'past' (bv. leeftijd).",
+  "492cd771-4145-4249-a009-147e11a6904f": "Je moet nog {price} betalen aan {name}, via het tabblad Boekhouding.",
+  "9526c69d-cdbf-4c90-ae2b-a7a274e42c3c": "Voeg het e-mailadres waarmee je inlogt ({email}) toe bij {member}, anders wordt jouw account losgekoppeld van dit lid. Of wijzig het e-mailadres waarmee je inlogt.",
+  "e7658433-afc4-4963-8ddf-afc1bda26bef": "Eén of meerdere tarieven van {group} zijn niet meer beschikbaar",
+  "e883ae60-e858-4bcf-9e60-5d03986459c2": "Eén of meerdere keuzemogelijkheden van {group} zijn niet meer beschikbaar",
+  "40b728b0-6784-47bb-9ffe-53e7c88e638b": "{member} is al ingeschreven voor {group}",
+  "73430be0-1a07-4730-9e2e-72528992767d": "Je kan niet meer inschrijven voor {group} omdat {member} al ingeschreven is voor een groep die je niet kan combineren.",
+  "e24f82f9-a11d-45bc-9719-3ebdfd1f28d6": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep.",
+  "6deb2a31-fcc5-4961-bcd8-01cb8332411b": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep (verplichte inschrijving bij leeftijdsgroep).",
+  "4ea84d3f-63f5-4ab0-bab2-a5c72fa0111d": "{member} kan pas inschrijven met een geldige actieve inschrijving  (verplichte inschrijving in regio).",
+  "b2486175-6dbd-4aa4-a57c-dc7e322fcd31": "Momenteel zijn de voorinschrijvingen nog bezig voor {group}. Dit is enkel voor bestaande leden",
+  "83f622e4-0ef5-4965-8d6d-10860df30a87": "De inschrijvingen voor {group} zijn volzet. Je kan wel nog inschrijven voor de wachtlijst",
+  "c006386b-0590-40c9-ae62-c4b7ade939f0": "Het maximum voor de keuzemogelijkheid {name} is overschreden",
+  "96e61729-ea9c-45bf-82da-56e6a92e6b91": "todo"
 }
