--- a/shared/locales/src/digit/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/digit/machine-GoogleGemini-fr.json
@@ -19430,5 +19430,113 @@
   "e122d6c9-a452-4c70-9868-f53c2520aedc": {
     "original": "todo",
     "translation": "todo"
+  },
+  "dce3d5b2-7cce-4ada-ab77-0572b2be509d": {
+    "original": "Verwijderde functie",
+    "translation": "Fonction supprimée"
+  },
+  "b1fdf269-a84e-44e8-9d2d-ef57919e3698": {
+    "original": "Weet je zeker dat je het gsm nummer '{phone}' wilt verwijderen?",
+    "translation": "Êtes-vous sûr de vouloir supprimer le numéro de gsm '{phone}'?"
+  },
+  "9860af1d-e902-4f21-b8bb-98e1e401f87f": {
+    "original": "Weet je zeker dat je het e-mailadres '{email}' wilt verwijderen?",
+    "translation": "Êtes-vous sûr de vouloir supprimer l’adresse e-mail '{email}'?"
+  },
+  "d233219f-cbc2-4b54-82df-494e068d754b": {
+    "original": "Weet je zeker dat je het adres '{address}' wilt verwijderen?",
+    "translation": "Êtes-vous sûr de vouloir supprimer l’adresse '{address}'?"
+  },
+  "d7d6da3d-3522-4c21-a03f-ef980380d4ae": {
+    "original": "Verschuldigd bedrag toevoegen",
+    "translation": "Ajouter un montant dû"
+  },
+  "b9bac60d-1fd8-43e7-9c9d-4b9b5227f9d6": {
+    "original": "Vul ontbrekende gegevens aan van {member}",
+    "translation": "Complétez les données manquantes de {member}"
+  },
+  "77e44908-5498-4b91-9b4f-8e55cb282dc5": {
+    "original": "Enkele gegevens van {member} ontbreken. Vul deze aan.",
+    "translation": "Certaines données de {member} manquent. Veuillez les compléter."
+  },
+  "69385e1a-413f-4583-9061-67072d0742b9": {
+    "original": "Voeg e-mailadres toe van {member}",
+    "translation": "Ajouter une adresse e-mail de {member}"
+  },
+  "f7999a55-e73a-49c4-ac9f-f5030d96ba43": {
+    "original": "todo",
+    "translation": "todo"
+  },
+  "d7fdebd4-7c3c-4316-b862-7ed777ff36ad": {
+    "original": "todo",
+    "translation": "todo"
+  },
+  "04ff85c0-eb98-46b8-975b-8fd136ddc49a": {
+    "original": "Een {name} moet minimum {days} duren",
+    "translation": "Un {name} doit durer minimum {days}"
+  },
+  "a7d005aa-ceaa-4323-8fac-a02fce174023": {
+    "original": "Een {name} mag maximaal {days} duren",
+    "translation": "Un {name} peut durer maximum {days}"
+  },
+  "76a41c36-99d1-467c-a243-3a30a56c272e": {
+    "original": "Voorbeeld: de aangerekende administratiekost bedraagt {exampleAdministrationFee1} op een bedrag van {exampleAdministrationFeeValue1}, en {exampleAdministrationFee2} op een bedrag van {exampleAdministrationFeeValue2}.",
+    "translation": "Exemple : les frais administratifs facturés s'élèvent à {exampleAdministrationFee1} sur un montant de {exampleAdministrationFeeValue1}, et {exampleAdministrationFee2} sur un montant de {exampleAdministrationFeeValue2}."
+  },
+  "90c49f44-4daa-4746-8fda-3558c588e651": {
+    "original": "{member} kan je op dit moment niet inschrijven bij {organization}. Dit kan het geval zijn als: de inschrijvingen gesloten zijn of als dit lid in geen enkele groep 'past' (bv. leeftijd).",
+    "translation": "Vous ne pouvez pas inscrire {member} actuellement dans {organization}. Cela peut être le cas si : les inscriptions sont closes ou si ce membre ne correspond à aucun groupe (par ex. âge)."
+  },
+  "492cd771-4145-4249-a009-147e11a6904f": {
+    "original": "Je moet nog {price} betalen aan {name}, via het tabblad Boekhouding.",
+    "translation": "Vous devez encore payer {price} à {name}, via l'onglet Comptabilité."
+  },
+  "9526c69d-cdbf-4c90-ae2b-a7a274e42c3c": {
+    "original": "Voeg het e-mailadres waarmee je inlogt ({email}) toe bij {member}, anders wordt jouw account losgekoppeld van dit lid. Of wijzig het e-mailadres waarmee je inlogt.",
+    "translation": "Ajoutez l'adresse e-mail avec laquelle vous vous connectez ({email}) à {member}, sinon votre compte sera déconnecté de ce membre. Ou modifiez l'adresse e-mail avec laquelle vous vous connectez."
+  },
+  "e7658433-afc4-4963-8ddf-afc1bda26bef": {
+    "original": "Eén of meerdere tarieven van {group} zijn niet meer beschikbaar",
+    "translation": "Un ou plusieurs tarifs de {group} ne sont plus disponibles"
+  },
+  "e883ae60-e858-4bcf-9e60-5d03986459c2": {
+    "original": "Eén of meerdere keuzemogelijkheden van {group} zijn niet meer beschikbaar",
+    "translation": "Un ou plusieurs choix de {group} ne sont plus disponibles"
+  },
+  "40b728b0-6784-47bb-9ffe-53e7c88e638b": {
+    "original": "{member} is al ingeschreven voor {group}",
+    "translation": "{member} est déjà inscrit pour {group}"
+  },
+  "73430be0-1a07-4730-9e2e-72528992767d": {
+    "original": "Je kan niet meer inschrijven voor {group} omdat {member} al ingeschreven is voor een groep die je niet kan combineren.",
+    "translation": "Vous ne pouvez plus vous inscrire pour {group} car {member} est déjà inscrit pour un groupe que vous ne pouvez pas combiner."
+  },
+  "e24f82f9-a11d-45bc-9719-3ebdfd1f28d6": {
+    "original": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep.",
+    "translation": "{member} ne satisfait pas aux conditions pour s'inscrire à ce groupe."
+  },
+  "6deb2a31-fcc5-4961-bcd8-01cb8332411b": {
+    "original": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep (verplichte inschrijving bij leeftijdsgroep).",
+    "translation": "{member} ne satisfait pas aux conditions pour s'inscrire à ce groupe (inscription obligatoire dans le groupe d'âge)."
+  },
+  "4ea84d3f-63f5-4ab0-bab2-a5c72fa0111d": {
+    "original": "{member} kan pas inschrijven met een geldige actieve inschrijving  (verplichte inschrijving in regio).",
+    "translation": "{member} ne peut s'inscrire qu'avec une inscription valide et active (inscription obligatoire dans la région)."
+  },
+  "b2486175-6dbd-4aa4-a57c-dc7e322fcd31": {
+    "original": "Momenteel zijn de voorinschrijvingen nog bezig voor {group}. Dit is enkel voor bestaande leden",
+    "translation": "Les préinscriptions sont actuellement en cours pour {group}. Ceci est uniquement pour les membres existants"
+  },
+  "83f622e4-0ef5-4965-8d6d-10860df30a87": {
+    "original": "De inschrijvingen voor {group} zijn volzet. Je kan wel nog inschrijven voor de wachtlijst",
+    "translation": "Les inscriptions pour {group} sont complètes. Vous pouvez vous inscrire sur la liste d'attente"
+  },
+  "c006386b-0590-40c9-ae62-c4b7ade939f0": {
+    "original": "Het maximum voor de keuzemogelijkheid {name} is overschreden",
+    "translation": "Le maximum pour le choix {name} a été dépassé"
+  },
+  "96e61729-ea9c-45bf-82da-56e6a92e6b91": {
+    "original": "todo",
+    "translation": "todo"
   }
 }
